# oidot

./: .cursorignore  .gitignore  README.md  main.py  pyproject.toml
gemini/1/: content_sample.json  g1.html  readme.html  template.html
oidot/: main.py  merge_docx.py
tests/: README.md  __init__.py  conftest.py  test_main.py  test_merge_docx.py
